--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,44 @@
-appdirs==1.4.3
-atomicwrites==1.4.0
-attrs==19.3.0
-autopep8==1.5
-backcall==0.2.0
-bcrypt==3.2.0
-black==19.10b0
+appnope==0.1.0
+backcall==0.1.0
+bcrypt==3.1.4
+beautifulsoup4==4.8.2
 blinker==1.4
-blis==0.7.4
-catalogue==2.0.4
 certifi==2020.12.5
-cffi==1.14.5
+cffi==1.11.5
 chardet==4.0.0
-click==7.1.2
-colorama==0.4.4
-cycler==0.10.0
-cymem==2.0.5
-decorator==4.4.2
-distlib==0.3.1
-dnspython==2.1.0
-email-validator==1.1.2
-filelock==3.0.12
-Flask==1.1.1
+Click==7.0
+decorator==4.3.0
+Faker==0.9.1
+Flask==1.0.2
 Flask-Bcrypt==0.7.1
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-gunicorn==19.9.0
-httplib2==0.19.1
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+gunicorn==20.0.4
 idna==2.10
-importlib-metadata==3.1.1
-iniconfig==1.1.1
-ipython==7.16.1
+ipython==7.0.1
 ipython-genutils==0.2.0
-itsdangerous==1.1.0
-jedi==0.18.0
-Jinja2==2.11.0
-neuralart==1.0.2
-numpy==1.20.0
-oauth2==1.9.0.post1
-packaging==20.9
-parso==0.8.1
-pathspec==0.7.0
-pathy==0.5.2
+itsdangerous==0.24
+jedi==0.13.1
+Jinja2==2.10
+MarkupSafe==1.1.1
+parso==0.3.1
+pexpect==4.6.0
 pickleshare==0.7.5
-Pillow==8.1.0
-pluggy==0.13.1
-preshed==3.0.5
-prompt-toolkit==3.0.14
-psycopg2==2.7.7
-psycopg2-binary==2.8.4
-py==1.10.0
-pycodestyle==2.5.0
-pycparser==2.20
-pydantic==1.7.4
-Pygments==2.7.4
-pyparsing==2.4.7
-pytest==6.2.2
-python-dateutil==2.8.1
-python-dotenv==0.18.0
-pytz==2021.1
-regex==2020.1.8
+prompt-toolkit==2.0.5
+psycopg2-binary==2.7.5
+ptyprocess==0.6.0
+pycparser==2.19
+Pygments==2.2.0
+python-dateutil==2.7.3
 requests==2.25.1
-scikit-learn==0.22.2
-scipy==1.6.3
-simplejson==3.17.2
-six==1.15.0
-smart-open==3.0.0
-soupsieve==2.2.1
-spacy==3.0.6
-spacy-legacy==3.0.5
-SQLAlchemy==1.3.13
-srsly==2.4.1
-thinc==8.0.3
-toml==0.10.0
-tqdm==4.60.0
-traitlets==5.0.5
-typed-ast==1.4.1
-typer==0.3.2
-typing-extensions==3.7.4.3
-urllib3==1.24.2
-virtualenv==20.2.2
-wasabi==0.8.2
-wcwidth==0.2.5
-Werkzeug==0.16.1
-WTForms==2.3.3
-yapf==0.29.0
-zipp==3.4.0
+simplegeneric==0.8.1
+six==1.11.0
+soupsieve==1.9.5
+SQLAlchemy==1.2.12
+text-unidecode==1.2
+traitlets==4.3.2
+urllib3==1.26.3
+wcwidth==0.1.7
+Werkzeug==0.14.1
+WTForms==2.2.1
